# netholdem

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
client/: Cargo.toml
client/src/: lib.rs
containers/builder/: Dockerfile
docs/: BUILDING.md  DESIGN.md  index.md
game/: Cargo.toml
game/src/: client.rs  lib.rs  model.rs  protocol.rs  server.rs
model/: Cargo.toml
netholdem_client/: Cargo.toml
netholdem_client/src/: main.rs
netholdem_game/: Cargo.toml
netholdem_game/src/: lib.rs
netholdem_model/: Cargo.toml
netholdem_model/src/: lib.rs
netholdem_protocol/: Cargo.toml
netholdem_protocol/src/: lib.rs
netholdem_server/: Cargo.toml
netholdem_server/config/: default.toml
netholdem_server/src/: cli.rs  client.rs  lib.rs  main.rs  requests.rs  server.rs  settings.rs  state.rs
netholdem_server/tests/: graceful_shutdown.rs
protocol/: Cargo.toml
server/: Cargo.toml
server/config/: default.toml
server/src/: lib.rs  server.rs  settings.rs  state.rs
server/tests/: graceful_shutdown.rs
src/: cli.rs  main.rs
src/client/: mod.rs
src/server/: mod.rs
ui/: Cargo.toml  package-lock.json  package.json
ui/src/: App.tsx  app.rs  client.rs  index.tsx  lib.rs
ui/static/: index.html  main.js  manifest.json
