[package]
name = "netholdem-game"
description = "Core logic for a terminal-based networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
getrandom = { version = "0.1", features = ["stdweb", "wasm-bindgen"]}
log = "0.4"
orion = "0.15"
rand = "0.7"
rand_core = "0.5"
rs_poker = { git = "https://github.com/kinghajj/rs-poker", branch = "serde" }
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = "0.6"
