[package]
name = "netholdem_client"
description = "Client for a terminal-based networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
edition = "2018"

[dependencies]
flexi_logger = "0.15"
log = "0.4"
netholdem_model = { path = "../netholdem_model" }
netholdem_protocol = { path = "../netholdem_protocol" }
docopt = "1.1"
cursive = "0.14"
rs_poker = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
