[package]
name = "netholdem_game"
description = "Core logic for a terminal-based networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
netholdem_model = { path = "../netholdem_model" }
netholdem_protocol = { path = "../netholdem_protocol" }
serde = { version = "1", features = ["derive"] }
