[package]
name = "netholdem_protocol"
description = "Client/server protocol for a terminal-based networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
netholdem_model = { path = "../netholdem_model" }
rs_poker = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
