[package]
name = "netholdem_server"
description = "Server for a terminal-based networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
edition = "2018"

[dependencies]
netholdem_game = { path = "../netholdem_game" }
netholdem_protocol = { path = "../netholdem_protocol" }
docopt = "1.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
