[package]
name = "netholdem_server"
description = "Server for a terminal-based networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
flexi_logger = "0.15"
futures = "0.3"
log = "0.4"
netholdem_game = { path = "../netholdem_game" }
netholdem_model = { path = "../netholdem_model" }
netholdem_protocol = { path = "../netholdem_protocol" }
docopt = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
