[package]
name = "netholdem-server"
description = "Server for a Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
license = "MIT"
edition = "2018"

[package.metadata.deb]
assets = [
    # server executable
    ["target/release/netholdem-server", "opt/netholdem/", "755"],
    ["config/default.toml", "opt/netholdem/config/", "644"],
    ["../ui/build/*", "opt/netholdem/ui", "644"],
]

[dependencies]
anyhow = "1.0"
async-local-bounded-channel = "0.1.0"
bincode = "1.2"
config = "0.10"
ctrlc = "3.1"
flexi_logger = "0.15"
futures = "0.3"
log = "0.4"
netholdem-game = { path = "../game" }
num_cpus = "1.12"
piper = "0.1"
rand = "0.7"
rand_core = "0.5"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"
tokio = { version = "0.2", features = ["full"] }
typenum = "1.11"
warp = "0.2"

[dev-dependencies]
tungstenite = "0.10"
tokio-tungstenite = "0.10"
x25519-dalek = "0.6"
