
[package]
name = "netholdem-ui"
description = "UI for a networked Texas Hold'em Poker game."
version = "0.1.0"
authors = ["Samuel Fredrickson <samfredrickson@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-local-bounded-channel = "0.1.0"
anyhow = "1.0"
bincode = "1.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
futures = "0.3"
js-sys = "0.3"
netholdem-game = { path = "../game" }
rand = "0.7"
rs_poker = { git = "https://github.com/kinghajj/rs-poker", branch = "serde" }
serde = { version = "1.0", features = ["derive"] }
typenum = "1.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "ErrorEvent", "Location", "Window", "WebSocket"] }
x25519-dalek = "0.6"
yew = { version = "0.14", features = ["web_sys"] }


[dev-dependencies]
wasm-bindgen-test = "0.2"
